--- a/golden/index.html
+++ b/golden/index.html
@@ -20,13 +20,130 @@
             </ul>
         </nav>
 
-        <h1>welcome to our studio!</h1>
-        <h1>it's nice to meet you</h1>
+        <h1 style="font-size: 40px; margin: 150px 0 0 0">welcome to our studio!</h1>
+        <h1 style="font-size: 75px; margin: 50px 0 50px 0">it's nice to meet you</h1>
         <button>tell me more</button>
     </div>
 </header>
-<section>
 
+<section>
+<div class="container">
+    <h1 class="typical-h1">
+        SERVICES
+    </h1>
+    <p class="typical-p">Proin iaculis purus consequat sem cure. </p>
+    <ul class="services-container-cards">
+        <li class="services-card">
+            <img src="img/icon1.png">
+            <h2>
+                E-Commerce
+            </h2>
+            <p>Proin iaculis purus consequat sem cure
+                digni ssim. Donec porttitora entum suscipit
+                aenean rhoncus posuere odio in tincidunt.</p>
+        </li>
+        <li class="services-card">
+            <img src="img/icon2.png">
+            <h2>
+                Responsive Web
+            </h2>
+            <p>Proin iaculis purus consequat sem cure
+                digni ssim. Donec porttitora entum suscipit
+                aenean rhoncus posuere odio in tincidunt.</p>
+        </li>
+        <li class="services-card">
+            <img src="img/icon3.png">
+            <h2>
+                Web Security
+            </h2>
+            <p>Proin iaculis purus consequat sem cure
+                digni ssim. Donec porttitora entum suscipit
+                aenean rhoncus posuere odio in tincidunt.</p>
+        </li>
+    </ul>
+</div>
+</section>
+
+<section style="background-color: #f9f9f9">
+    <div class="container">
+        <h1 class="typical-h1">Our portfolio</h1>
+        <p class="typical-p">Proin iaculis purus consequat sem cure.</p>
+        <div class="portfolio-images">
+            <img src="img/img1.jpg">
+            <img src="img/img2.jpg">
+            <img src="img/img3.jpg">
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <h1 class="typical-h1">About Us</h1>
+        <p class="typical-p">Proin iaculis purus consequat sem cure. </p>
+        <ul class="about-us-cards">
+            <li class="about-us-card left-about">
+                <div class="about-text">
+                    <h2>July 2010
+                        Our Humble Beginnings
+                    </h2>
+                    <p>
+                        Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
+                        aenean rhoncus posuere odio in tincidunt. Proin
+                        iaculis purus consequat sem cure digni
+                        ssim. Donec porttitora entum suscipit.
+                    </p>
+                </div>
+                <img src="img/about1.jpg">
+            </li>
+            <li class="about-us-card right-about">
+                <img src="img/about2.jpg">
+                <div class="about-text">
+                    <h2>January 2011
+                        Facing Startup Battles
+                    </h2>
+                    <p>
+                        Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
+                        aenean rhoncus posuere odio in tincidunt. Proin
+                        iaculis purus consequat sem cure digni
+                        ssim. Donec porttitora entum suscipit aenean
+                        rhoncus posuere odio in tincidunt.
+                    </p>
+                </div>
+            </li>
+            <li class="about-us-card left-about">
+                <div class="about-text">
+                    <h2>December 2012
+                        Enter The Dark Days
+                    </h2>
+                    <p>
+                        Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
+                        aenean rhoncus posuere odio in tincidunt. Proin
+                        iaculis purus consequat sem cure digni.
+                    </p>
+                </div>
+                <img src="img/about3.jpg">
+            </li>
+            <li class="about-us-card right-about">
+                <img src="img/about4.jpg">
+                <div class="about-text">
+                    <h2>february 2014
+                        Our Triumph
+                    </h2>
+                    <p>
+                        Proin iaculis purus consequat sem cure
+                        digni ssim. Donec porttitora entum suscipit
+                        aenean rhoncus posuere odio in tincidunt. Proin
+                        iaculis purus consequat sem cure digni
+                        ssim. Donec porttitora entum suscipit aenean.
+                    </p>
+                </div>
+            </li>
+        </ul>
+        <p class="copyright">© Copyright 2014 FreebiesXpress.com</p>
+    </div>
 </section>
 
 </body>
