--- a/gravity/index.html
+++ b/gravity/index.html
@@ -16,7 +16,39 @@
     <div class="nav">
         <div class="container">
             <div class="row">
-                .md-
+                <div class="col-2">
+                    <img src="img/logo.svg" alt="logo" class="logo">
+                </div>
+                <div class="offset-4 col-4">
+                    <button>
+                        <img src="img/search.svg" alt="search">
+                    </button>
+                </div>
+                <div class="col-2">
+                    <button class="ml-auto">
+                        <img src="img/menu.svg" alt="menu">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="offer">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="offer-cont">
+                        <h1 class="offer-cont__title">
+                            Work around you and your team
+                        </h1>
+                        <p class="offer-cont__text">
+                            From ads that dance or sing to MTV-like commercials, online advertisers are now using a new type of technology “rich media” to attract consumers.
+                        </p>
+                        <button class="offer-cont__btn btn">
+                            Get started
+                        </button>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
