--- a/gravity/index.html
+++ b/gravity/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Document</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -35,7 +37,7 @@
     <div class="offer">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-md-6">
                     <div class="offer-cont">
                         <h1 class="offer-cont__title">
                             Work around you and your team
@@ -47,12 +49,139 @@
                             Get started
                         </button>
                     </div>
-
+                </div>
+                <div class="col-md-6 be-static">
+                    <div class="hero">
+                        <a href="#" class="video-btn"></a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </header>
+
+<section class="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <img src="img/img2.jpg" alt="about poster">
+            </div>
+            <div class="offset-1 col-md-6 d-flex align-items-center">
+                <div class="about-cont">
+                    <h2 class="about-cont__title">
+                        We solve digital problems with an outstanding creative flare
+                    </h2>
+                    <p class="about-cont__text">
+                        The best time to view the moon, obviously, is at night when there are few clouds and the weather is accommodating for a long and lasting study.
+                    </p>
+                    <p class="about-cont__text">
+                        For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
+                    </p>
+                    <div class="author">
+                        <img src="img/author.jpg" alt="author image">
+                        <div class="about-author">
+                            <h1 class="author-name">
+                                Denis Shepovalov
+                            </h1>
+                            <p class="author-work">
+                                Co-Founder & CEO
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="services-title">
+                    <p class="services-title__label">
+                        — Services
+                    </p>
+                    <h2 class="services-title__header">
+                        We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details
+                    </h2>
+                </div>
+            </div>
+            <div class="col-md-5 ml-auto d-flex justify-content-between">
+                <ul class="services-list services-list__left">
+                    <li class="services-list__item">Multimedia</li>
+                    <li class="services-list__item">Interactive design</li>
+                    <li class="services-list__item">Packaging</li>
+                    <li class="services-list__item">Branding</li>
+                </ul>
+                <ul class="services-list services-list__right">
+                    <li class="services-list__item">Creative Strategy</li>
+                    <li class="services-list__item">UI/UX</li>
+                    <li class="services-list__item">Coding</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <img class="services-play" src="img/play.svg" alt="play">
+                        <img src="img/img3.jpg" alt="work">
+                    </div>
+                    <div class="item">
+                        <img class="services-play" src="img/play.svg" alt="play">
+                        <img src="img/img4.jpg" alt="work">
+                    </div>
+                    <div class="item">
+                        <img class="services-play" src="img/play.svg" alt="play">
+                        <img src="img/img3.jpg" alt="work">
+                    </div>
+                    <div class="item">
+                        <img class="services-play" src="img/play.svg" alt="play">
+                        <img src="img/img4.jpg" alt="work">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="features">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 be-static">
+                <div class="feature-images">
+                    <img src="img/img5.jpg" alt="features poster" class="features-image">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="features-cont">
+                    <h2 class="features-cont__title">
+                        Well thought with super easy to use
+                    </h2>
+                    <p class="features-cont__text">
+                        As we approached the palace I could see through the great windows of the first floor the brilliantly illuminated audience chamber of Than Kosis. The immense hall was crowded with nobles and their women.
+                    </p>
+                    <ul class="features-cont__main__features">
+                        <li class="features-cont__main__feature">
+                            <img class="features-cont__main__feature__image" src="img/icon100.svg" alt="Ultimate Result">
+                            Ultimate Result
+                        </li>
+                        <li class="features-cont__main__feature">
+                            <img class="features-cont__main__feature__image" src="img/bag.svg" alt="minimal design">
+                            Minimal Design
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
