--- a/gravity/index.html
+++ b/gravity/index.html
@@ -179,6 +179,46 @@
     </div>
 </section>
 
+<section class="works">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div>
+                    <p class="section-works-title">
+                        — our works
+                    </p>
+                    <h2 class="works-title">
+                        Discover our Work
+                    </h2>
+                </div>
+            </div>
+            <div class="col-md-6 d-flex align-items-end">
+                <ul class="work-tabs">
+                    <il class="work-tabs__item">
+                        <a class="work-nav active" href="#work-all">all</a>
+                    </il>
+                    <il class="work-tabs__item">
+                        <a class="work-nav" href="#work-branding">branding</a>
+                    </il>
+                    <il class="work-tabs__item">
+                        <a class="work-nav" href="#work-web">web</a>
+                    </il>
+                    <il class="work-tabs__item">
+                        <a class="work-nav" href="#work-development">development</a>
+                    </il>
+                    <il class="work-tabs__item">
+                        <a class="work-nav" href="#work-films">films</a>
+                    </il>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+
+    </div>
+</section>
+
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
