gravity 'works' block end

--- a/gravity/index.html
+++ b/gravity/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Gravity</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -45,7 +45,7 @@
                         <p class="offer-cont__text">
                             From ads that dance or sing to MTV-like commercials, online advertisers are now using a new type of technology “rich media” to attract consumers.
                         </p>
-                        <button class="offer-cont__btn btn">
+                        <button class="btn">
                             Get started
                         </button>
                     </div>
@@ -132,14 +132,6 @@
                         <img class="services-play" src="img/play.svg" alt="play">
                         <img src="img/img4.jpg" alt="work">
                     </div>
-                    <div class="item">
-                        <img class="services-play" src="img/play.svg" alt="play">
-                        <img src="img/img3.jpg" alt="work">
-                    </div>
-                    <div class="item">
-                        <img class="services-play" src="img/play.svg" alt="play">
-                        <img src="img/img4.jpg" alt="work">
-                    </div>
                 </div>
             </div>
         </div>
@@ -192,35 +184,89 @@
                     </h2>
                 </div>
             </div>
-            <div class="col-md-6 d-flex align-items-end">
-                <ul class="work-tabs">
-                    <il class="work-tabs__item">
-                        <a class="work-nav active" href="#work-all">all</a>
-                    </il>
-                    <il class="work-tabs__item">
-                        <a class="work-nav" href="#work-branding">branding</a>
-                    </il>
-                    <il class="work-tabs__item">
-                        <a class="work-nav" href="#work-web">web</a>
-                    </il>
-                    <il class="work-tabs__item">
-                        <a class="work-nav" href="#work-development">development</a>
-                    </il>
-                    <il class="work-tabs__item">
-                        <a class="work-nav" href="#work-films">films</a>
-                    </il>
+            <div class="col-md-6">
+                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="work-nav nav-link active" id="pills-all-tab" data-toggle="pill" href="#pills-all" role="tab" aria-controls="pills-contact" aria-selected="true">all</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="work-nav nav-link" id="pills-branding-tab" data-toggle="pill" href="#pills-branding" role="tab" aria-controls="pills-branding" aria-selected="false">branding</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="work-nav nav-link" id="pills-web-tab" data-toggle="pill" href="#pills-web" role="tab" aria-controls="pills-web" aria-selected="false">web</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="work-nav nav-link" id="pills-development-tab" data-toggle="pill" href="#pills-development" role="tab" aria-controls="pills-development" aria-selected="false">development</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="work-nav nav-link" id="pills-films-tab" data-toggle="pill" href="#pills-films" role="tab" aria-controls="pills-films" aria-selected="false">films</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
-        <div class="row">
-
+        <div class="row tab-content" id="pills-tabContent">
+            <div class="col">
+                <div class="works-wrap tab-pane fade show active" id="pills-all" role="tabpanel" aria-labelledby="pills-all-tab">
+                    <a href="" class="works-wrap__item"><img src="img/img7.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img8.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img9.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img10.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img11.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img12.jpg" alt="work"></a>
+                </div>
+                <div class="works-wrap tab-pane fade" id="pills-branding" role="tabpanel" aria-labelledby="pills-branding-tab">
+                    <a href="" class="works-wrap__item"><img src="img/img8.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img7.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img10.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img9.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img12.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img11.jpg" alt="work"></a>
+                </div>
+                <div class="works-wrap tab-pane fade" id="pills-web" role="tabpanel" aria-labelledby="pills-web-tab">
+                    <a href="" class="works-wrap__item"><img src="img/img11.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img8.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img7.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img9.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img10.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img12.jpg" alt="work"></a>
+                </div>
+                <div class="works-wrap tab-pane fade" id="pills-development" role="tabpanel" aria-labelledby="pills-development-tab">
+                    <a href="" class="works-wrap__item"><img src="img/img10.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img8.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img12.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img11.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img7.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img9.jpg" alt="work"></a>
+                </div>
+                <div class="works-wrap tab-pane fade" id="pills-films" role="tabpanel" aria-labelledby="pills-films-tab">
+                    <a href="" class="works-wrap__item"><img src="img/img12.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img11.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img10.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img9.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img8.jpg" alt="work"></a>
+                    <a href="" class="works-wrap__item"><img src="img/img7.jpg" alt="work"></a>
+                </div>
+            </div>
         </div>
-
+        <div class="row works-end-text">
+            <div class="col-md-8">
+                <p class="work-text">
+                    It picks up the words on the page and displays ads that are similar to those words. Then when someone either performs an action or clicks on your page you will get paid.
+                </p>
+            </div>
+            <div class="col-md-4 work-end-btn">
+                <button class="btn">
+                    see our works
+                </button>
+            </div>
+        </div>
     </div>
 </section>
 
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 
 </body>
