desktop end gravity

--- a/gravity/index.html
+++ b/gravity/index.html
@@ -78,7 +78,7 @@
                         For most of us, the idea of astronomy is something we directly connect to “stargazing”, telescopes and seeing magnificent displays in the heavens.
                     </p>
                     <div class="author">
-                        <img src="img/author.jpg" alt="author image">
+                        <img src="img/author.png" alt="author image">
                         <div class="about-author">
                             <h1 class="author-name">
                                 Denis Shepovalov
@@ -123,7 +123,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="owl-carousel owl-theme">
+                <div class="owl-carousel owl-theme services-carousel">
                     <div class="item">
                         <img class="services-play" src="img/play.svg" alt="play">
                         <img src="img/img3.jpg" alt="work">
@@ -176,10 +176,10 @@
         <div class="row">
             <div class="col-md-6">
                 <div>
-                    <p class="section-works-title">
+                    <p class="section-title__label">
                         — our works
                     </p>
-                    <h2 class="works-title">
+                    <h2 class="section-title__heading">
                         Discover our Work
                     </h2>
                 </div>
@@ -263,6 +263,107 @@
         </div>
     </div>
 </section>
+
+<section class="testimonials">
+    <div class="container">
+        <div class="owl-carousel owl-theme testimonials-carousel">
+            <div class="item">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div>
+                            <p class="section-title__label testimonials-title__label">
+                                — Testimonials
+                            </p>
+                            <h2 class="section-title__heading">
+                                "All products were super great with strong attention to details."
+                            </h2>
+                        </div>
+                        <div class="contributor">
+                            <h3 class="contributor-name">
+                                Elena Radina
+                            </h3>
+                            <p class="contributor-desc">
+                                Designer at Craftwork
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-5 ml-auto contributor-image-container">
+                        <img src="img/photo.jpg" alt="Polina Kuzina" class="contributor-image">
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div>
+                            <p class="section-title__label testimonials-title__label">
+                                — Testimonials
+                            </p>
+                            <h2 class="section-title__heading">
+                                "Professionals in their craft! All products were super great with strong attention to details, and overall vibe"
+                            </h2>
+                        </div>
+                        <div class="contributor">
+                            <h3 class="contributor-name">
+                                Polina Kuzina
+                            </h3>
+                            <p class="contributor-desc">
+                                Manager at Craftwork
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-5 ml-auto contributor-image-container">
+                        <img src="img/photo.jpg" alt="Polina Kuzina" class="contributor-image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="clients">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <h1 class="clients-title">
+                    Our Clients
+                </h1>
+            </div>
+            <div class="col-md-5">
+                <p class="section-title__label clients-text-title">
+                    — We worked with
+                </p>
+                <p class="clients-text">
+                    Our favorite brands are our friends! We help them to achieve their goals, they help us to stay sharp.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <ul class="brands-clients">
+                    <li class="client-brand"><img src="img/xiaomi.svg" alt="xiaomi"></li>
+                    <li class="client-brand"><img src="img/tinder.svg" alt="tinder"></li>
+                    <li class="client-brand"><img src="img/apple.svg" alt="apple"></li>
+                    <li class="client-brand"><img src="img/nike.svg" alt="nike"></li>
+                    <li class="client-brand"><img src="img/amd.svg" alt="amd"></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="footer-logo">
+                    <img src="img/logo-footer.svg" alt="gravity">
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
 
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
