desktop end gravity

--- a/gravity/index.html
+++ b/gravity/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img src="img/img2.jpg" alt="about poster">
+                <img src="img/img2.jpg" alt="about poster" class="img-fluid">
             </div>
             <div class="offset-1 col-md-6 d-flex align-items-center">
                 <div class="about-cont">
