--- a/gravity/index.html
+++ b/gravity/index.html
@@ -184,7 +184,7 @@
                     </h2>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="works-tab-container col-12 col-xl-6">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class="work-nav nav-link active" id="pills-all-tab" data-toggle="pill" href="#pills-all" role="tab" aria-controls="pills-contact" aria-selected="true">all</a>
