--- a/gravity/index.html
+++ b/gravity/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img src="img/img2.jpg" alt="about poster" class="img-fluid">
+                <img src="img/img2.jpg" alt="about poster" class="about-image img-fluid">
             </div>
             <div class="offset-1 col-md-6 d-flex align-items-center">
                 <div class="about-cont">
@@ -147,7 +147,7 @@
                     <img src="img/img5.jpg" alt="features poster" class="features-image">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-lg-6">
                 <div class="features-cont">
                     <h2 class="features-cont__title">
                         Well thought with super easy to use
@@ -275,15 +275,15 @@
                                 — Testimonials
                             </p>
                             <h2 class="section-title__heading">
-                                "All products were super great with strong attention to details."
+                                "Professionals in their craft! All products were super great with strong attention to details, and overall vibe"
                             </h2>
                         </div>
                         <div class="contributor">
                             <h3 class="contributor-name">
-                                Elena Radina
+                                Polina Kuzina
                             </h3>
                             <p class="contributor-desc">
-                                Designer at Craftwork
+                                Manager at Craftwork
                             </p>
                         </div>
                     </div>
