--- a/gravity/index.html
+++ b/gravity/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="col-2">
                     <button class="ml-auto">
-                        <img src="img/menu.svg" alt="menu">
+                        <img src="img/menu.svg" alt="menu" class="menu-btn">
                     </button>
                 </div>
             </div>
