Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -618,19 +618,46 @@
 
                 <ul class="social-networks-buttons">
                     <li class="social-network-btn">
-                        <a href=""></a>
+                        <a href="#">
+                            <i style="color: #0177b4;" class="fas fa-circle social-network-bg">
+                                <i class="fab fa-linkedin-in social-network-icon"></i>
+                            </i>
+                        </a>
                     </li>
                     <li class="social-network-btn">
-                        <a href=""></a>
+                        <a href="#">
+                            <i style="color: #78bdf1;" class="fas fa-circle social-network-bg">
+                                <i class="fab fa-twitter social-network-icon"></i>
+                            </i>
+                        </a>
                     </li>
                     <li class="social-network-btn">
-                        <a href=""></a>
+                        <a href="#">
+                            <i style="color: #3a5795;" class="fas fa-circle social-network-bg">
+                                <i class="fab fa-facebook-f social-network-icon"></i>
+                            </i>
+                        </a>
                     </li>
                     <li class="social-network-btn">
-                        <a href=""></a>
+                        <a href="#">
+                            <i style="color: #3d739c;" class="fas fa-circle social-network-bg">
+                                <i class="fab fa-instagram social-network-icon"></i>
+                            </i>
+                        </a>
                     </li>
                 </ul>
 
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 offset-md-4">
+                <div class="all-right-reserved-container">
+                    <span class="all-right-reserved">
+                    © 2020 Onsharp, Inc. All Rights Reserved.
+                </span>
+                    <a href="#">Privacy Policy</a>
+                </div>
             </div>
         </div>
 
