Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -20,17 +20,18 @@
 <header class="site-header">
     <div class="container-xl">
         <div class="row">
-            <nav class="navbar navbar-expand-lg p-0 w-100">
+            <nav class="navbar navbar-expand-xl p-0 w-100">
                 <div class="col-md-3 pl-0">
                     <a class="navbar-brand p-0" href="#">
                         <img src="img/onsharp-logo-min.png" alt="Onsharp" width="300" height="73" class="header-logo">
                     </a>
                 </div>
 
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                </button>
+
                 <div class="col-md-9 pr-0">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-                    </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav ml-auto align-items-center">
                             <li class="nav-item">
@@ -50,6 +51,31 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link main-navigation-link main-button" href="#">WORK WITH US</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-12 p-0">
+                    <div id="mobileNavbar" class="collapse navbar-collapse">
+                        <ul class="navbar-nav ml-auto align-items-center">
+                            <li class="nav-item">
+                                <a class="nav-link mobile-navigation-link" href="#">WHAT WE DO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mobile-navigation-link" href="#">WHO WE SERVE</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mobile-navigation-link" href="#">OUR WORK</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mobile-navigation-link" href="#">ABOUT</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mobile-navigation-link" href="#">RESOURCES</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mobile-navigation-link" href="#">WORK WITH US</a>
                             </li>
                         </ul>
                     </div>
